--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,8 +36,8 @@ jobs:
           RELEASE_VERSION=$(awk -F: '/Version:/{gsub(/[ ]+/,"") ; print $2}' DESCRIPTION)
           REPOSITORY_NAME="${{ github.event.repository.name }}"
           (awk "/^#+.*${REPOSITORY_NAME//./\.}.*${RELEASE_VERSION//./\.}$/{flag=1;next}/^#+.*${REPOSITORY_NAME//./\.}.*/{flag=0}flag" NEWS.md | grep -v "^$" || echo "* ${RELEASE_VERSION}") > RELEASE_BODY.txt
-          echo '<a href="https://github.com/jaywcjlove/github-action-contributors/graphs/contributors">
-              <img src="https://jaywcjlove.github.io/github-action-contributors/CONTRIBUTORS.svg" />
+          echo '<a href="${{ github.event.org.url }}/graphs/contributors">
+              <img src="${{ github.event.org.avatar_url }}/CONTRIBUTORS.svg" />
           </a>' >> RELEASE_BODY.txt
           
       - name: Create release 🌟
@@ -45,3 +45,38 @@ jobs:
         with:
           body_path: RELEASE_BODY.txt
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Generate Changelog
+        id: changelog
+        uses: jaywcjlove/changelog-generator@v1.5.0
+        with:
+          head-ref: ${{steps.create_tag.outputs.version}}
+          filter-author: (小弟调调™|Renovate Bot)
+          filter: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'
+          
+      - name: Create Release
+        uses: ncipollo/release-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          body: |
+            Documentation ${{ steps.changelog.outputs.tag }}: https://raw.githack.com/jaywcjlove/github-action-contributors/ bla/index.html  
+            Comparing Changes: ${{ steps.changelog.outputs.compareurl }} 
+            
+            ${{ steps.changelog.outputs.changelog }}
+            ```yml
+            - run: mkdir -p build
+            - name: Generate Contributors Images
+              uses: jaywcjlove/github-action-contributors@main
+              with:
+                token: xxxxxxx
+                filter-author: renovate\[bot\]
+                output: build/CONTRIBUTORS.svg
+            - name: Deploy
+              uses: peaceiris/actions-gh-pages@v3
+              with:
+                github_token: xxxxxxx
+                publish_dir: ./build
+            ```
+            <a href="https://github.com/jaywcjlove/github-action-contributors/graphs/contributors">
+              <img src="https://jaywcjlove.github.io/github-action-contributors/CONTRIBUTORS.svg" />
+            </a>
