--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -58,25 +58,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          body: |
-            Documentation ${{ steps.changelog.outputs.tag }}: https://raw.githack.com/jaywcjlove/github-action-contributors/ bla/index.html  
-            Comparing Changes: ${{ steps.changelog.outputs.compareurl }} 
-            
-            ${{ steps.changelog.outputs.changelog }}
-            ```yml
-            - run: mkdir -p build
-            - name: Generate Contributors Images
-              uses: jaywcjlove/github-action-contributors@main
-              with:
-                token: xxxxxxx
-                filter-author: renovate\[bot\]
-                output: build/CONTRIBUTORS.svg
-            - name: Deploy
-              uses: peaceiris/actions-gh-pages@v3
-              with:
-                github_token: xxxxxxx
-                publish_dir: ./build
-            ```
-            <a href="https://github.com/jaywcjlove/github-action-contributors/graphs/contributors">
-              <img src="https://jaywcjlove.github.io/github-action-contributors/CONTRIBUTORS.svg" />
-            </a>
+          bodyFile: "RELEASE_BODY.txt"
+          artifacts: "release.tar.gz,foo/*.txt"
+          allowUpdates: true
+          
