--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -50,8 +50,8 @@ jobs:
           RELEASE_VERSION=$(awk -F: '/Version:/{gsub(/[ ]+/,"") ; print $2}' DESCRIPTION)
           REPOSITORY_NAME="${{ github.event.repository.name }}"
           (awk "/^#+.*${REPOSITORY_NAME//./\.}.*${RELEASE_VERSION//./\.}$/{flag=1;next}/^#+.*${REPOSITORY_NAME//./\.}.*/{flag=0}flag" NEWS.md | grep -v "^$" || echo "* ${RELEASE_VERSION}") > RELEASE_BODY.txt
-          echo '<a href="${{ github.event.org.url }}/graphs/contributors">
-              <img src="${{ github.event.org.avatar_url }}/CONTRIBUTORS.svg" />
+          echo '<a href="${{ github.event.repo.url }}/graphs/contributors">
+              <img src="${{ github.event.repo.url }}/CONTRIBUTORS.svg" />
           </a>' >> RELEASE_BODY.txt
           ${{steps.github_release.outputs.changelog}} >>  RELEASE_BODY.txt 
       
